2002-01-03  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* utils.c:
	* gda-postgres-recordset.c: Added support for GdaGeometricPoint.

2002-01-02  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* gda-postgres-provider.c (process_sql_commands()): don't call
	PQclear() after storing the resultset. It's done when freeing the
	resultset.
	(gda_postgres_provider_get_schema()): added this one and a few helper 
	functions.
	(gda_postgres_provider_open_connection()): accept REQUIRESSL and
	HOSTADDR as parameters and changed LOGIN by USER. Now uses
	PQconnectdb() instead of the old PQsetdbLogin(). Changed default date
	style to ISO.

	* utils.c (gda_postgres_set_type_value()): GDA_TYPE_DATE now works.
	Changed the type of the default from GDA_TYPE_UNKNOWN to
	GDA_TYPE_STRING as a temporary workaround to make TIMESTAMP, TIME and
	BINARY work.

	* GNOME_Database_Provider_Postgres.server.in: added parameters
	REQUIRESSL and HOSTADDR. Changed LOGIN by USER.

2001-12-26  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* gda-postgres-provider.c: added the call to
	gda_server_connection_add_error() where I forgot to put it.
	Added gda_postgres_provider_supports().
	Call PQfinish() if PQsetdbLogin() fails.
	Always call PQfinish() in close_connection() to avoid memory leaks.
	Handle the possible NULL return value in PQexec().

	* utils.c: First version of a working gda_postgres_type_to_gda().
	Added gda_postgres_set_type_value().

2001-12-20  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* gda-postgres-provider.c: some cosmetic changes, implementation of
	begin, commit and rollback.

	* gda-postgres-recordset.c: commented out some portions of code
	related to data types so as the code compiles ok.

	* gda-postgres.h: added include for gda-postgres-recordset.h needed by
	gda-postgres-provider.c. Changed the declaration of 
	gda_postgres_type_to_gda() to make the code compile.

	* utils.c: make the code compile but gda_postgres_type_to_gda()